# minesweeper

./: .gitignore  CMakeLists.txt  README.md  bin.rar  build.bat
src/: CMakeLists.txt  debug.c  debug.h  event.h  main.c  main.h  session.c  session.h  sprite.c  sprite.h
src/game/: CMakeLists.txt  cell.c  cell.h  field.c  field.h  random.c  random.h
src/logic/: CMakeLists.txt  field.c
